fix spacing errors

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ html #Headline {
     
 }
 .table tr:hover {
-    background-color: #000000;
+    background-color: #ccff15;
     border: solid #B22222;
 }
 
